# handler/response.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"net/http"
 
+	"github.com/MigueelLago/goportunities/schemas"
 	"github.com/gin-gonic/gin"
 )
 
@@ -22,4 +23,14 @@ func sendSuccess(ctx *gin.Context, op string, data interface{}) {
 		"data":    data,
 	})
 
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateOpeningResponse struct {
+	Message string                  `json:"message"`
+	Data    schemas.OpeningResponse `json:"data"`
 }
